Working readiness gate